src/PJ/POCO/TEST/NEG/NRECURSE.POC
/* Test recursion */
#pragma poco echo "expect>Poco out of stack space near line"

recurse(int i)
{
recurse(i+1);
}

main()
{
puts("This will compile, but will get a stack overflow eventually\n");
recurse(0);
}
